--- a/esmvaltool/recipes/examples/recipe_check_obs.yml
+++ b/esmvaltool/recipes/examples/recipe_check_obs.yml
@@ -185,7 +185,17 @@ diagnostics:
       - {dataset: ESACCI-SST, project: OBS, tier: 2, type: sat, version: L4-GHRSST-SSTdepth-OSTIA-GLOB, start_year: 1992, end_year: 2010}
     scripts: null
 
-
+  GHCN:
+    description: GHCN
+    variables:
+      pr:
+        preproc: nopp
+        mip: Amon
+        field: T2Ms
+    additional_datasets:
+      - {dataset: GHCN, project: OBS, tier: 2, type: ground, version: 1, start_year: 1900, end_year: 2014}
+    scripts: null      
+    
   HadCRUT3:
     description: HadCRUT3
     variables:
@@ -196,7 +206,6 @@ diagnostics:
     additional_datasets:
       - {dataset: HadCRUT3, project: OBS, tier: 2, type: ground, version: 1, start_year: 1850, end_year: 2013}
     scripts: null
-
 
 
   HadCRUT4:
