--- a/esmvaltool/recipes/recipe_ocean_Landschutzer2014.yml
+++ b/esmvaltool/recipes/recipe_ocean_Landschutzer2014.yml
@@ -75,8 +75,8 @@ diagnostics:
         field: TO2M
         mip: Omon
         fx_files: [areacello, ]
-#    additional_datasets:
-#      - {dataset: Landschutzer2014,  project: OBS,  type: clim,  version: CDIAC_G05,  start_year: 2000,  end_year: 2010,  tier: 2}
+    additional_datasets:
+      - {dataset: Landschutzer2014,  project: OBS,  type: clim,  version: CDIAC_G05,  start_year: 2000,  end_year: 2010,  tier: 2}
     scripts:
       Global_surface_timeseries:
         script: ocean/diagnostic_timeseries.py
@@ -110,8 +110,8 @@ diagnostics:
         fx_files: [areacello, ]
         maps_range: [-0.2, 0.2]
         diff_range: [-0.1, 0.1]
-#    additional_datasets:
-#      - {dataset: Landschutzer2014,  project: OBS,  type: clim,  version: CDIAC_G05,  start_year: 2000,  end_year: 2010,  tier: 2}
+    additional_datasets:
+      - {dataset: Landschutzer2014,  project: OBS,  type: clim,  version: CDIAC_G05,  start_year: 2000,  end_year: 2010,  tier: 2}
     scripts:
       Global_Ocean_surface_map:
         script: ocean/diagnostic_maps.py
