--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,9 +68,10 @@ jobs:
             python setup.py test --installation
             esmvaltool -h
             ncl -V
-            # cdo tests
+            # cdo test, check that it supports hdf5
             cdo --version
-            echo 'netcdf tmp { variables: float test; data: test = 0; }' > tmp.cdl
+            echo 0 | cdo -f nc input,r1x1 tmp.nc
+            ncdump tmp.nc > tmp.cdl
             ncgen -k hdf5 tmp.cdl
             cdo -f nc copy tmp.nc tmp2.nc
       - store_artifacts:
